--- a/style.css
+++ b/style.css
@@ -25,11 +25,13 @@ body
         font-weight: bold;
         border:none; 
         align-content: flex-end;
+       
       }
       #menu a {
         color: #fff;
-        padding: 5px 10px;
+        padding: 10px;
         text-decoration: none;
+        
         
       }
       p
@@ -45,4 +47,9 @@ body
         margin-left: auto;
         margin-right: auto;
      }
+     #menue
+     {
+         float: right;
+     }
+
       
